--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -26,13 +26,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/1687e5bd-8c81-4113-a2b5-60f2dcdcb4c0">
+    <img src="https://github.com/primer/brand/assets/131988618/1687e5bd-8c81-4113-a2b5-60f2dcdcb4c0" />
     <Caption>
         Ensure checkbox labels are direct. 
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/92e2004a-d304-4988-aa4d-b8f8fead15fa">
+    <img src="https://github.com/primer/brand/assets/131988618/92e2004a-d304-4988-aa4d-b8f8fead15fa" />
     <Caption>
         Don't make labels confusing, avoid negative statements, and indirect. 
     </Caption>
@@ -41,13 +41,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/27a536e8-6bdb-4515-bb9c-029cd7deb482">
+    <img src="https://github.com/primer/brand/assets/131988618/27a536e8-6bdb-4515-bb9c-029cd7deb482" />
     <Caption>
         Use consistent styling, starting with capitalization, and not ending with punctuation.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/87460a05-c0e6-4d9b-89fe-56d1a889d0e8">
+    <img src="https://github.com/primer/brand/assets/131988618/87460a05-c0e6-4d9b-89fe-56d1a889d0e8" />
     <Caption>
         Don't have inconsistent styling, not starting with capitalization, or ending in punctuation.
     </Caption>
@@ -56,13 +56,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/89fb2b6e-c178-4b6d-ba61-9205fc382770">
+    <img src="https://github.com/primer/brand/assets/131988618/89fb2b6e-c178-4b6d-ba61-9205fc382770" />
     <Caption>
         Use first person when asking users for acknowledgement or consent.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/e59627c9-d4f3-455d-8232-f08eef5a03b1">
+    <img src="https://github.com/primer/brand/assets/131988618/e59627c9-d4f3-455d-8232-f08eef5a03b1" />
     <Caption>
         Don't use third person when asking users for acknowledgement or consent.
     </Caption>
@@ -71,13 +71,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/131988618/a788949c-0d08-4951-b9e2-6adf8d40c675">
+    <img src="https://github.com/primer/brand/assets/131988618/a788949c-0d08-4951-b9e2-6adf8d40c675" />
     <Caption>
         When used in groups, order checkboxes in logical order, like smallest to largest or least restrictive to most restrictive. 
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/131988618/0199ab3d-a199-468e-abba-8776b3a34c14">
+    <img src="https://github.com/primer/brand/assets/131988618/0199ab3d-a199-468e-abba-8776b3a34c14" />
     <Caption>
         When possible, don't order checkboxes without logic. 
     </Caption>
