--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -92,7 +92,7 @@ If you intend to use this component as part of another component, it should alwa
 
 ## Options
 
-### Intermediate 
+### Indeterminate
 
 An indeterminate checkbox state should be used if the input value is neither true nor false. This can be useful in situations where you are required to display an incomplete state, or one that is dependent on other input selections to determine a value.
 
