--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -11,18 +11,18 @@ export default ComponentLayout
 
 ![An image displaying a checkbox with a checkbox and label.](https://github.com/primer/brand/assets/131988618/61d1c706-2e3a-427c-bc37-0b77891b8007)
 
-- Checkbox: A selction control.
+- Checkbox: A selection control.
 - Checkbox Label: A description for the checkbox. 
 
 ## Usage
 
-Checkbox enables users to choose multiple options from a group, making them well-suited for situations where users may select more than one option. 
+The Checkbox enables users to choose multiple options from a group, making them well-suited for situations where users may select more than one option. 
 
 Unlike the [Radio](/components/Radio) component or [Select](/components/Select) component, Checkbox does not restrict users to choosing just a single option. Instead, they necessitate a submission step, such as selecting an option or consent action. 
 
 Checkbox is commonly employed in forms to gather user input, granting them the ability to select zero or more options from a list.
 
-Keep the Checkbox component with direct labels, consistent styling (starting with capitalization and without ending in punctuation)
+Keep the Checkbox component with direct labels and consistent styling (starting with capitalization and without ending in punctuation)
 
 <DoDontContainer>
   <Do>
@@ -34,7 +34,7 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/92e2004a-d304-4988-aa4d-b8f8fead15fa" />
     <Caption>
-        Don't make labels confusing, avoid negative statements, and indirect. 
+        Don't make checkbox labels confusing, indirect, and avoid negative statements. 
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -43,13 +43,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/27a536e8-6bdb-4515-bb9c-029cd7deb482" />
     <Caption>
-        Use consistent styling, starting with capitalization, and not ending with punctuation.
+        Use consistent styling (starting with capitalization and not ending with punctuation).
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/87460a05-c0e6-4d9b-89fe-56d1a889d0e8" />
     <Caption>
-        Don't have inconsistent styling, not starting with capitalization, or ending in punctuation.
+        Don't have inconsistent styling (not starting with capitalization or ending in punctuation).
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -58,13 +58,13 @@ Keep the Checkbox component with direct labels, consistent styling (starting wit
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/89fb2b6e-c178-4b6d-ba61-9205fc382770" />
     <Caption>
-        Use first person when asking users for acknowledgement or consent.
+        Use first-person when asking users for acknowledgement or consent.
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/e59627c9-d4f3-455d-8232-f08eef5a03b1" />
     <Caption>
-        Don't use third person when asking users for acknowledgement or consent.
+        Don't use third-person when asking users for acknowledgement or consent.
     </Caption>
   </Dont>
 </DoDontContainer>
