--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -84,6 +84,16 @@ Keep the Checkbox component with direct labels and consistent styling (starting 
   </Dont>
 </DoDontContainer>
 
+### States
+
+Checkboxes have static dimensions and three different states: rest (default), focus, and disabled.
+
+<img
+  width="960"
+  alt="An image showing checkboxes with three different states, rest, focus, and disabled."
+  src="https://user-images.githubusercontent.com/586552/204882576-5b698ce7-c471-4f4e-9f33-c861842f5743.png"
+/>
+
 ### Accessibility 
 
 Please use [FormControl](/components/FormControl) to display accessible checkboxes in the UI. This Checkbox component is intended only as an ingredient for other custom components, or as a drop-in replacement for native HTML checkboxes outside of form use-cases.
