--- a/apps/docs/content/components/Radio/react.mdx
+++ b/apps/docs/content/components/Radio/react.mdx
@@ -7,6 +7,9 @@ figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=30
 storybook: '/react/storybook?path=/story/components-forms-radio--playground'
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 ## Examples
 
 <Note variant="warning">
