--- a/apps/docs/content/components/River.mdx
+++ b/apps/docs/content/components/River.mdx
@@ -7,7 +7,7 @@ storybook: '/brand/storybook/?path=/story/components-river--default'
 description: Use the river component to render text and image pairs.
 ---
 
-import {Box as Container, Label} from '@primer/react'
+import {Label} from '@primer/react'
 import {
   defaultRiverImageTextRatio,
   defaultRiverAlign,
