--- a/apps/docs/content/index.mdx
+++ b/apps/docs/content/index.mdx
@@ -1,8 +1,8 @@
 import {HeroLayout} from '@primer/gatsby-theme-doctocat'
-import {Box} from '@primer/react'
+import {Box as PRCBox} from '@primer/react'
 import {Link, Button, Heading, Text} from '@primer/react-brand'
 
-<Box
+<PRCBox
   sx={{
     p: 5,
     mt: 5,
@@ -10,7 +10,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
 >
   <Heading as="h4">Primer Brand</Heading>
   <Text as="p">Read the installation instructions to get started.</Text>
-  <Box
+  <PRCBox
     sx={{
       mt: 4,
       flexDirection: 'row',
@@ -45,7 +45,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
         Contribute
       </Button>
     </p>
-  </Box>
-</Box>
+  </PRCBox>
+</PRCBox>
 
 export default HeroLayout
