--- a/apps/docs/content/components/AnchorNav.mdx
+++ b/apps/docs/content/components/AnchorNav.mdx
@@ -29,7 +29,7 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
 ### Basic
 
 ```jsx live
-<Box sx={{position: 'relative', overflowX: 'scroll'}}>
+<Container sx={{position: 'relative', overflowX: 'scroll'}}>
   <AnchorNav>
     <AnchorNav.Link href="#basic-section1">Section one</AnchorNav.Link>
     <AnchorNav.Link href="#basic-section2">Section two</AnchorNav.Link>
@@ -84,7 +84,7 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
   >
     Section 5
   </section>
-</Box>
+</Container>
 ```
 
 ### Fewer links
@@ -92,7 +92,7 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
 `AnchorNav` implementations with fewer than `5` links, will automatically align links to the `start`.
 
 ```jsx live
-<Box sx={{position: 'relative', overflowX: 'scroll'}}>
+<Container sx={{position: 'relative', overflowX: 'scroll'}}>
   <AnchorNav>
     <AnchorNav.Link href="#fewer-links-section1">Section one</AnchorNav.Link>
     <AnchorNav.Link href="#fewer-links-section2">Section two</AnchorNav.Link>
@@ -127,7 +127,7 @@ Please refer to our [Storybook examples](https://primer.style/brand/storybook/?p
   >
     Section 3
   </section>
-</Box>
+</Container>
 ```
 
 ## Component props
