--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -18,7 +18,7 @@ export default ComponentLayout
 
 The Radio component enables users to select a single option when used in a grop, making them suitable for scenarios where users are restricted to choosing just one option.
 
-For scenarios that allow for multiple selections, use the Checkbox(/components/Checkbox) component instead. To implement Radio buttons effectively, ensure that each radio button has a clear and concise label associated with it. Maintain consistent styling, including capitalization and without ending punctuation.
+For scenarios that allow for multiple selections, use the [Checkbox](/components/Checkbox) component instead. To implement Radio buttons effectively, ensure that each radio button has a clear and concise label associated with it. Maintain consistent styling, including capitalization and without ending punctuation.
 
 If you have a short list of options and want users to select only one, consider using a radio button in a radio group. A radio group is a collection of related radio buttons grouped together. It helps provide clear context and organization for the options.
 
@@ -64,7 +64,7 @@ Radios have static dimensions and three different states when checked or uncheck
 
 ### Accessibility 
 
-Please use FormControl(/components/FormControl) to render a standard radio input field. If using standalone, it should always be accompanied by a corresponding `<label>` to improve support for assistive technologies.
+Please use [FormControl](/components/FormControl) to render a standard radio input field. If using standalone, it should always be accompanied by a corresponding `<label>` to improve support for assistive technologies.
 
 ## Options
 
