--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -70,7 +70,7 @@ Please use [FormControl](/components/FormControl) to render a standard radio inp
 
 ### Caption
 
-A caption for a checkbox can be useful in certain scenarios where additional information or clarification is needed for the checkbox option. Some examples include complex or technical options, ambiguous or unclear options, legal or compliance requirements, or accessibility considerations.
+A caption for a Radio can be useful in certain scenarios where additional information or clarification is needed for the Radio option. Some examples include complex or technical options, ambiguous or unclear options, legal or compliance requirements, or accessibility considerations.
 
 ## Related components
 
