--- a/apps/docs/content/components/Box/index.mdx
+++ b/apps/docs/content/components/Box/index.mdx
@@ -27,7 +27,7 @@ While it is highly customizable and can be used to create complex layouts, it is
 
 ## Accessibility
 
-Box is a purely decorative element. It sets no intrinsic roles, ARIA attributes, or keyboard shortcuts.
+Box is a purely decorative element by default. It sets no intrinsic roles, ARIA attributes, or keyboard shortcuts.
 
 Any interactive content within a box should be given their own appropriate accessibility treatment based on the specific workflow of your application.
 
