--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -213,7 +213,7 @@ We recommend using either the grid or stack component, depending on how the chil
   <Box as="figcaption" mt="1">
     <h4 style={{marginBottom: 0}}>Navigation</h4>
     <Text as="p" mt="0">
-      Fot the page navigation or a list of links. E.g. Having a logo on the left
+      For the page navigation or a list of links. E.g. Having a logo on the left
       side and the navigation on the right.
     </Text>
   </Box>
