--- a/apps/docs/content/components/Box/react.mdx
+++ b/apps/docs/content/components/Box/react.mdx
@@ -322,14 +322,14 @@ All padding and margin options can be configured for indivisual viewports: Each 
 | :------------------ | :----------------------------------------------------------------------- | :---------: | :-------------------------------------------------------------------------- |
 | `padding`           | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to all internal sides of the Box.                              |
 | `paddingBlockStart` | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal block start (top) side of the Box.             |
-| `paddingRight`      | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal right side of the Box.                         |
-| `paddingBlockEnd`   | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal bottom side of the Box.                        |
-| `paddingLeft`       | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal left side of the Box.                          |
+| `paddingRight`      | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal inline end (right) of the Box.                 |
+| `paddingBlockEnd`   | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal block end (bottom) side of the Box.            |
+| `paddingLeft`       | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds padding to the internal inline start (left) side of the Box.           |
 | `margin`            | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to all external sides of the Box.                               |
 | `marginBlockStart`  | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external block start (top) side of the Box.              |
-| `marginInlineEnd`   | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external right side of the Box.                          |
-| `marginBlockEnd`    | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external bottom side of the Box.                         |
-| `marginInlineStart` | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external left side of the Box.                           |
+| `marginInlineEnd`   | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external inline end (right) side of the Box.             |
+| `marginBlockEnd`    | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external block end (bottom) side of the Box.             |
+| `marginInlineStart` | <PropTableValues values={[...BoxSpacingValues]} commaSeparated  />       | `undefined` | Adds margin to the external inline start (left) side of the Box.            |
 | `backgroundColor`   | <PropTableValues values={[...BoxBackgroundColors]} commaSeparated  />    | `undefined` | Applies a system-level background color to the Box.                         |
 | `borderRadius`      | <PropTableValues values={[...BoxBorderRadiusOptions]} commaSeparated  /> | `undefined` | Applies a system-level border radius value to the Box.                      |
 | `borderWidth`       | <PropTableValues values={[...BoxBorderWidthOptions]} commaSeparated  />  | `undefined` | Applies a system-level border width value to the Box.                       |
