Apply suggestions from code review
Co-authored-by: Josep Martins <josepmartins@github.com>

--- a/apps/docs/content/components/Radio/index.mdx
+++ b/apps/docs/content/components/Radio/index.mdx
@@ -16,9 +16,9 @@ export default ComponentLayout
 
 ## Usage
 
-The Radio component enables users to select a single option when used in a grop, making them suitable for scenarios where users are restricted to choosing just one option.
+Use the radio component to enable users to select a single option from a list.
 
-For scenarios that allow for multiple selections, use the [Checkbox](/components/Checkbox) component instead. To implement Radio buttons effectively, ensure that each radio button has a clear and concise label associated with it. Maintain consistent styling, including capitalization and without ending punctuation.
+For scenarios that allow for multiple selections, use the [checkbox](/components/Checkbox) component instead. Keep the radio label descriptive and concise: aim for no more than 3 words. Write labels in sentence case and without ending in punctuation
 
 If you have a short list of options and want users to select only one, consider using a radio button in a radio group. A radio group is a collection of related radio buttons grouped together. It helps provide clear context and organization for the options.
 
@@ -32,7 +32,7 @@ If you have a short list of options and want users to select only one, consider 
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/38fb8666-f785-46ee-b3e3-9768ac8d0193" />
     <Caption>
-        Don't overlap or leave out potential Radio options.
+        Don't overlap or leave out potential radio options from the list.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -41,13 +41,13 @@ If you have a short list of options and want users to select only one, consider 
   <Do>
     <img src="https://github.com/primer/brand/assets/131988618/766c9c24-6f02-444e-aad9-26dfabb8990d" />
     <Caption>
-        When used in groups, order Radios in logical order, like smallest to largest or least restrictive to most restrictive. 
+        When used in groups, order the radio options in a logical order. E.g. smallest to largest or least restrictive to most restrictive options. 
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/131988618/9e125629-675c-4bc7-99eb-0e39a5a1de5d" />
     <Caption>
-        When possible, don't order Radios without logic. 
+        Don't order radio options without logic in a list. 
     </Caption>
   </Dont>
 </DoDontContainer>
