--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -33,7 +33,7 @@ River content should be short and concise, no longer than 3 or 4 sentences and i
 
 ### Stacked
 
-Two or more rivers can be stacked to walk the user through a set of feautres. When stacking rivers, consider alternating between left and right alignments to create a more dynamic reading flow. When alternating alignements, use a `40:60` image to text ratio, when not, keep the ratio to `50:50`.
+Two or more rivers can be stacked to guide the user through a set of feautres. When stacking rivers, use alternating between left and right alignments to create a more dynamic reading flow. When alternating alignments, use a `40:60` image to text ratio, otherwise keep the ratio to `50:50`.
 
 <DoDontContainer>
   <Do>
