--- a/apps/docs/content/components/Checkbox/index.mdx
+++ b/apps/docs/content/components/Checkbox/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 ![An image displaying a checkbox with a checkbox and label.](https://github.com/primer/brand/assets/131988618/61d1c706-2e3a-427c-bc37-0b77891b8007)
 
 - Checkbox: A selection control.
-- Checkbox Label: A description for the checkbox. 
+- Label: A description for the checkbox. 
 
 ## Usage
 
